# sudoku

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
src/: BoardPosition.cpp  BoardPosition.h  Player.cpp  Player.h  Point2D.cpp  Point2D.h  Suduko.cpp  Suduko.h  main.cpp
